2005-01-11 David Inglis
	Further fix to 36837
	
	* src/org/eclipse/cdt/internal/ui/util/ResourceToItemsMapper.java
	
2005-01-11 David Inglis

	Fix for 82516
	
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementLabels.java
	

2005-01-07 Alain Magloire
	Part of Fix 82323.
	The "New" action was not shown when workspace was empty
	or no selection.
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	And make sure we do not put problem icons on resources that !exist() && isReadOnly().
	* src/org/eclipse/cdt/internal/ui/util/ResourceToItemsMapper.java
	
2005-01-07 Alain Magloire
	Fix PR 82202
	* src/org/eclipse/cdt/internal/ui/cview/CViewDropAdapter.java
	* src/org/eclipse/cdt/internal/ui/editor/DocumentAdapter.java
	* src/org/eclipse/cdt/internal/ui/util/Resources.java

2004-12-22 Alain Magloire

	On going work to clean cdt.ui from misc. warnings
	and removing the deprecated interfaces in Eclipse-3.1

2004-12-21 Alain Magloire
	We use TogglePresentation action definition ID rather the one
	define in the CDT, since now the platfrom defines one.
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorActionContributor.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	* src/org/eclipse/cdt/internal/ui/editor/ToggglePresentationAction.java

2004-12-21 Alain Magloire
	Fix PR 81635 patch form Przemek
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java

2004-12-20 Alain Magloire
	Fix PR 50578
	* src/org/eclipse/cdt/internal/ui/cview/CViewDropAdapter.java

2004-12-14 Alain Magloire
	PR 80631 Patch form Przemek Tomaszewski
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutilinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinerProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java